--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,24 @@ project(Projeto_schedule)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Projeto_schedule main.cpp Classes/Student.cpp Classes/Student.h Classes/UcClass.cpp Classes/UcClass.h Classes/Lecture.cpp Classes/Lecture.h Classes/dataBase.cpp Classes/dataBase.h)
+add_executable(Projeto_schedule main.cpp Classes/Student.cpp Classes/Student.h Classes/UcClass.cpp Classes/UcClass.h Classes/Lecture.cpp Classes/Lecture.h Classes/DataBase.cpp Classes/DataBase.h Classes/Program.cpp Classes/Program.h Classes/Menu.cpp Classes/Menu.h)
+
+# Doxygen Build
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+    set(BUILD_DOC_DIR "${CMAKE_SOURCE_DIR}/docs/output")
+    if(NOT EXISTS "${BUILD_DOC_DIR}")
+        file(MAKE_DIRECTORY "${BUILD_DOC_DIR}")
+    endif()
+    set(DOXYGEN_IN "${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile")
+    set(DOXYGEN_OUT "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
+    configure_file("${DOXYGEN_IN}" "${DOXYGEN_OUT}" @ONLY)
+    message("Doxygen build started")
+    add_custom_target(Doxygen ALL
+            COMMAND "${DOXYGEN_EXECUTABLE}" "${DOXYGEN_OUT}"
+            WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+            COMMENT "Generating API documentation with Doxygen"
+            VERBATIM)
+else(DOXYGEN_FOUND)
+    message("Doxygen needs to be installed to generate the documentation.")
+endif(DOXYGEN_FOUND)
