--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Projeto_schedule)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Projeto_schedule main.cpp Classes/Student.cpp Classes/Student.h Classes/UcClass.cpp Classes/UcClass.h Classes/Lecture.cpp Classes/Lecture.h Classes/DataBase.cpp Classes/DataBase.h Classes/Program.cpp Classes/Program.h Classes/Menu.cpp Classes/Menu.h)
+add_executable(Projeto_schedule main.cpp Classes/Student.cpp Classes/Student.h Classes/UcClass.cpp Classes/UcClass.h Classes/Lecture.cpp Classes/Lecture.h Classes/Database.cpp Classes/Database.h Classes/Program.cpp Classes/Program.h Classes/Menu.cpp Classes/Menu.h)
 
 # Doxygen Build
 find_package(Doxygen)
